--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "expo": "~52.0.35",
+    "expo-av": "^15.0.2",
+    "expo-haptics": "^14.0.1",
     "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-svg": "^15.11.1"
